# paca-tools

./: .gitignore  CMakeLists.txt  README.md
formats/: animation.md  material.md  model.md
pacaconvert/: CMakeLists.txt  pacaconvert.cpp
pacaconvert/include/pacaconvert/: pacaconvert.hpp
pacaread/: CMakeLists.txt  pacaread.cpp
pacaread/include/pacaread/: pacaread.hpp
pacawrite/: CMakeLists.txt  pacawrite.cpp
pacawrite/include/pacawrite/: pacawrite.hpp
serializer-generator/: ASTParser.cpp  ASTParser.hpp  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  Main.cpp  Serializer.hpp.template  SerializerTemplate.cpp  SerializerTemplate.hpp  generate-serializer-template.sh  serializer-generator.cmake
serializer-generator/test/: Serializer.cpp  Serializer.hpp  test.cpp  test.h
to-paca-format/: CMakeLists.txt  main.cpp  material.cpp  material.hpp  meshes.cpp  meshes.hpp  model.cpp  model.hpp
